# mk-clustering

./: .gitignore  Makefile  README.md  choosing_cid.py  clusters_aligned_match.py  constraints.txt  list_top_words_in_K.py  pyproject.toml
configs/: default.yaml
data/clean/: top200k.txt
eval/metrics/: alignment_trained-mk_lemma_skipgram_parallel__trained-mk_lemma_skipgram_serial_K200.csv  alignment_trained-mk_lemma_skipgram_serial__trained-mk_lemma_skipgram_parallel_K1200.csv  alignment_trained-mk_lemma_skipgram_serial__trained-mk_lemma_skipgram_parallel_K200.csv  alignment_trained-mk_lemma_skipgram_serial__trained-mk_lemma_skipgram_parallel_K2000.csv  alignment_trained-mk_lemma_skipgram_serial__trained-mk_lemma_skipgram_parallel_K400.csv  alignment_trained-mk_lemma_skipgram_serial__trained-mk_lemma_skipgram_parallel_K800.csv  alignment_trained-mk_skipgram_serial__trained-mk_skipgram_parallel_K1200.csv  alignment_trained-mk_skipgram_serial__trained-mk_skipgram_parallel_K200.csv  alignment_trained-mk_skipgram_serial__trained-mk_skipgram_parallel_K2000.csv  alignment_trained-mk_skipgram_serial__trained-mk_skipgram_parallel_K400.csv  alignment_trained-mk_skipgram_serial__trained-mk_skipgram_parallel_K800.csv  benchmarks.csv  benchmarks_pivot.csv  cluster_stats_trained-mk_lemma_skipgram_parallel_K1200.csv  cluster_stats_trained-mk_lemma_skipgram_parallel_K200.csv  cluster_stats_trained-mk_lemma_skipgram_parallel_K2000.csv  cluster_stats_trained-mk_lemma_skipgram_parallel_K400.csv  cluster_stats_trained-mk_lemma_skipgram_parallel_K800.csv  (+26 more)
src/mkclustering/: align.py  (+16 more)
(+53 files in other folders)
